The main page layout is now way better on mobile + fixed scrollbar issue on Chromium browsers

--- a/deck.css
+++ b/deck.css
@@ -54,3 +54,8 @@ ol li {
 	text-decoration: default;
 	list-style-type: decimal;
 }
+
+#new-card-header {
+	font-size: 7.5rem;
+	color: #555555;
+}
